tests/test_proof/bad/output/enums-overlap.catala_en.Proof
[ERROR] [A.x] At least two exceptions overlap for this variable:
  --> tests/test_proof/bad/enums-overlap.catala_en
   | 
15 |   context x content integer
   |           ^
   + Test
Counterexample generation is disabled so none was generated.
